# fastr

./: .gitignore  .hgignore  .hgtags  .travis.yml  3rd_party_licenses.txt  CHANGELOG.md  COPYING  LICENSE  LICENSE.txt  README.md  SECURITY.md  ci.hocon  ci.jsonnet  common.json  graal_common.json  initial.package.blacklist  ll.rds  testScript.R
.github/ISSUE_TEMPLATE/: 0_feature_request_template.md  1_r_bug_template.md  2_pgk_install_bug_template.md  config.yml
Rpkgsource/: .project
SocketTest/src/: Server.java
ci_common/: common.hocon
com.oracle.truffle.r.native/: .cproject  .project  Makefile  platform.mk  version.source
com.oracle.truffle.r.native.recommended/: .project  Makefile
com.oracle.truffle.r.native/builtinlibs/: Makefile
com.oracle.truffle.r.native/f2c/: Makefile
com.oracle.truffle.r.native/fficall/: LIBS  Makefile  README
com.oracle.truffle.r.nodes.builtin/: locales.R
com.oracle.truffle.r.parser/: gramgen.bat
com.oracle.truffle.r.pkgs/rJava/: DESCRIPTION  NAMESPACE  NEWS  README.md  config.status  configure  configure.ac  configure.win  mkdist  version
com.oracle.truffle.r.pkgs/rJava/R/: 0classes.R  J.R  arrays.R  call.R  comparison.R  completion.R  converter.R  exceptions.R  import.R  instanceof.R  jfirst.R  jinit.R  jri.R  loader.R  memprof.R  methods.R  options.R  reflection.R  rep.R  rj.R  serialize.R  tools.R  with.R  zzz.R  zzz.R.in
com.oracle.truffle.r.pkgs/rJava/R/windows/: FirstLib.R
com.oracle.truffle.r.pkgs/rJava/jri/: LICENSE  Makefile.all  Makefile.in  Makefile.win  Makevars.win  Mutex.java  NEWS  RBool.java  RConsoleOutputStream.java  README  REXP.java  RFactor.java  RList.java  RMainLoopCallbacks.java  RVector.java  Rengine.java  configure  configure.ac  configure.win  mkdist  package-info.java  run.in  version
com.oracle.truffle.r.pkgs/rJava/jri/REngine/: LICENSE  Makefile  MutableREXP.java  REXP.java  REXPGenericVector.java  REngineException.java  RFactor.java  RList.java  mkmvn.sh  package-info.java  pom.xml
com.oracle.truffle.r.pkgs/rJava/jri/REngine/JRI/: JRIEngine.java  Makefile  package-info.java
com.oracle.truffle.r.pkgs/rJava/jri/REngine/JRI/test/: Makefile  RTest.java
com.oracle.truffle.r.pkgs/rJava/jri/REngine/Rserve/: Makefile  RConnection.java  RFileInputStream.java  RFileOutputStream.java  RserveException.java  StartRserve.java  mkmvn.sh  package-info.java  pom.xml
com.oracle.truffle.r.pkgs/rJava/jri/REngine/Rserve/protocol/: REXPFactory.java  RPacket.java  RTalk.java
com.oracle.truffle.r.pkgs/rJava/jri/REngine/Rserve/src/test/java/org/rosuda/rserve/: RserveTest.java
com.oracle.truffle.r.pkgs/rJava/jri/REngine/Rserve/test/: Makefile  PlotDemo.java  StartRserve.java  jt.java  test.java
com.oracle.truffle.r.pkgs/rJava/jri/bootstrap/: Boot.java  DelegatedClassLoader.java  DelegatedURLClassLoader.java  JRIBootstrap.c  JRIBootstrap.h  JRIBootstrap.java  JRIClassLoader.java  Makefile  mft
com.oracle.truffle.r.pkgs/rJava/jri/src/: Makefile.all  Makefile.in  Makefile.win  Rcallbacks.c  Rcallbacks.h  Rdecl.h  Rengine.c  Rinit.c  Rinit.h  config.h.in  globals.c  globals.h  h2ic  jri.c  jri.h  rjava.c  rjava.h
com.oracle.truffle.r.pkgs/rJava/jri/src/win32/: Makefile  findjava.c  jvm.def  jvm64.def
com.oracle.truffle.r.pkgs/rJava/man/: Exceptions.Rd  J.Rd  accessOp.Rd  aslist.Rd  clone.Rd  instanceof.Rd  jarray.Rd  jarrayRef-class.Rd  java-tools.Rd  javaImport.Rd  jcall.Rd  jcast.Rd  jcastToArray.Rd  jcheck.Rd  jclassName.Rd  jengine.Rd  jequals.Rd  jfield.Rd  jfloat-class.Rd  jfloat.Rd  jinit.Rd  jmemprof.Rd  jnew.Rd  jnull.Rd  jobjRef-class.Rd  jpackage.Rd  jrectRef-class.Rd  jreflection.Rd  jserialize.Rd  jsimplify.Rd  loader.Rd  new.Rd  rep.Rd  show.Rd  toJava.Rd  with.Rd
com.oracle.truffle.r.pkgs/rJava/src/: Makevars  Makevars.in  Makevars.win  Rglue.c  arrayc.c  callJNI.c  callback.c  callback.h  config.h  config.h.in  fields.c  init.c  install.libs.R  jri_glue.c  loader.c  otables.c  rJava.c  rJava.h  tools.c
com.oracle.truffle.r.pkgs/rJava/src/java/: ArrayDimensionException.java  ArrayWrapper.java  DummyPoint.java  FlatException.java  Makefile  NotAnArrayException.java  NotComparableException.java  ObjectArrayException.java  PrimitiveArrayException.java  RJavaArrayIterator.java  RJavaArrayTools.java  RJavaClassLoader.java  RJavaComparator.java  RJavaImport.java  RJavaTools.java  RectangularArrayBuilder.java  RectangularArrayExamples.java  RectangularArraySummary.java
com.oracle.truffle.r.pkgs/rJava/src/jvm-w32/: Makefile  WinRegistry.c  config.h  findjava.c
com.oracle.truffle.r.pkgs/rJava/tests/: Leaks.java  Makefile  README  Types.java  leaks.R  testthat.R  types.R
com.oracle.truffle.r.pkgs/rJava/tests/testthat/: testArrays.R  testBasic.R  testJ.R
com.oracle.truffle.r.release/: .project  Makefile
com.oracle.truffle.r.runtime/: .checkstyle_checks.xml  .checkstyle_suppressions.xml
com.oracle.truffle.r.runtime.ffi.native/: .project  Makefile
com.oracle.truffle.r.test/: .checkstyle.exclude
com.oracle.truffle.r.test.cran/: initial.package.blacklist  ok.packages  recommended  top100  top100test
com.oracle.truffle.r.test.integration/: pom.xml
com.oracle.truffle.r.test.native/: .cproject  .project  Makefile
com.oracle.truffle.r.test.packages/: gated  gated-downstream  gated1  gated2  gated3  gated4  gated5  ignore.suggests  importantPackages  importantPackagesTop500  initial.package.blacklist  test.mx.args  test.output.filter  top100  top100versions
documentation/: .project  Index.md  Limitations.md  README.md  allocprof.md  debugging.md  graphics.md
mx.fastr/: .project  .pydevproject  GraalCE_R_license_3rd_party_license.txt  copylib.py  findbugs-exclude.xml  imports  install_dependencies.py  mx_copylib.py  mx_fastr.py  mx_fastr_compile.py  mx_fastr_dists.py  mx_fastr_edinclude.py  mx_fastr_install_deps.py  mx_fastr_junit.py  mx_fastr_mkgramrd.py  mx_fastr_pkganalyze_old.py  mx_fastr_pkgs.py  mx_fastr_pkgtest.py  mx_find_pcre.py  mx_findlib.py  native-image.properties  projects  projects.old  projects.py  suite.py
org.rosuda.javaGD/: .checkstyle_checks.xml
(+5049 files in other folders)
